# fastapi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
authorization_app/: main.py
db_app/: main.py
depens_app/: main.py
docker_app/: Dockerfile  commands.txt  main.py
file_app/: main.py
front_app/: main.py
front_app/models/: models.py
front_app/static/: books_front.html
intro/: how_to_run.txt  main.py
middleware_app/: docs.txt  main.py
pydantic_app/: main.py
simple_app/: __init__.py  books.json  main.py
simple_app/tests/: test_api.py
structure_app/: README.md
structure_app/src/: database.py  main.py
structure_app/src/api/: __init__.py  books.py  dependencies.py
structure_app/src/models/: books.py
structure_app/src/schemas/: books.py
task_app/: main.py
